Better titlebar on mobile; fixed “Contact” section

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,7 +6,7 @@ p {
   margin: 0px;
 }
 
-container {
+.container {
     max-width: 900px !important;
 }
 
@@ -42,6 +42,11 @@ container {
   -ms-transform: rotate(0.000001deg);
   transform: rotate(0.000001deg);
 }
+.contact, .contact p {
+    color: white;
+    background-color: rgb(50, 64, 83);
+    width: 100%;
+}
 
 
 #titlebar {
@@ -52,7 +57,7 @@ container {
   left: 0;
   z-index: 100;
 
-  background-color: rgba(17, 17, 17, 0.5);
+  background-color: rgba(17, 17, 17, 0.65);
   -webkit-transition: background-color 600ms;
   transition: background-color 600ms;
   color: #FFF;
@@ -60,30 +65,11 @@ container {
   letter-spacing: 1.1px;
 }
 
-#titlebar.scrolled {
-  background-color: rgba(17, 17, 17, 1);
-  -webkit-transition: background-color 600ms;
-  transition: background-color 600ms;
-}
-
-#titlebar.open, #titlebar.open nav {
-  background-color: rgba(17, 17, 17, 1);
-}
-
-#titlebar.open nav {
-  opacity: 1;
-  -webkit-transition: opacity 400ms ease-out;
-  transition: opacity 400ms ease-out;
-  pointer-events: auto;
-}
-
 #titlebar a {
   font-weight: 400;
   -webkit-transition: color 600ms;
   transition: color 600ms;
 }
-
-
 
 .coverr {
   position: relative;
@@ -147,19 +133,15 @@ container {
   margin-bottom: 8px;
 }
 
-#categories ul li a.active {
-  color: #F33446;
-}
-
-#contact {
-    background-color: rgb(50, 64, 83);
-}
-
 .heading {
   margin-top: 30px;
   text-align: center;
   text-transform: uppercase;
   font-size: 45px;
+}
+
+.white {
+    color: white;
 }
 
 ul {
@@ -220,5 +202,54 @@ nav ul li a {
     border-radius: 150px;
     -webkit-border-radius: 150px;
     -moz-border-radius: 150px;
+  }
+}
+
+/* Mobile */
+@media only screen and (max-width: 767px){
+
+  #mobile-nav {
+    display: block;
+  }
+
+  nav {
+    opacity: 0;
+    position: relative;
+    height: 110px;
+    float: none;
+    margin: 0;
+    top: -2px;
+    left: inherit;
+    width: 100%;
+    padding-top: 4px;
+    background-color: rgba(17, 17, 17, 1);
+    -webkit-transition: opacity 400ms ease-out;
+    transition: opacity 400ms ease-out;
+    pointer-events: none;
+  }
+
+  #titlebar.open, #titlebar.open nav {
+    background-color: rgba(17, 17, 17, 1);
+  }
+
+  #titlebar.open nav {
+    opacity: 1;
+    -webkit-transition: opacity 400ms ease-out;
+    transition: opacity 400ms ease-out;
+    pointer-events: auto;
+  }
+
+  nav ul li{
+    float: none;
+    margin-bottom: 20px;
+    text-align: right;
+  }
+
+  .heading {
+    font-size: 38px;
+  }
+
+  .modal-content {
+    top: 0px;
   }
 }
